Fix styles scrollbar

--- a/css/styles-2.css
+++ b/css/styles-2.css
@@ -329,6 +329,20 @@ footer {
     cursor: pointer;
 }
 
+body::-webkit-scrollbar {
+    inline-size: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: #a7a0a0;
+    border-radius: 4px;
+    block-size: 100px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background: #e0dddd;
+}
+
 @media screen and (min-width:1360px) {
     .hero {
         block-size: 21.875rem;
