--- a/css/styles-3.css
+++ b/css/styles-3.css
@@ -322,6 +322,20 @@ footer {
     cursor: pointer;
 }
 
+body::-webkit-scrollbar {
+    inline-size: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: #a7a0a0;
+    border-radius: 4px;
+    block-size: 100px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background: #606060;
+}
+
 @media screen and (min-width:1360px) {
     .hVariantes-content {
         margin-block-start: 3.5rem;
